[package]
name = "bendy"
version = "0.2.1"
edition = "2018"

authors = [
    "P3KI <contact@p3ki.com>",
    "TQ Hirsch <tq@p3ki.com>",
    "Bruno Kirschner <bruno@p3ki.com>",
]

description = """
A rust library for encoding and decoding bencode with enforced canonicalization rules.
"""

repository = "https://github.com/P3KI/bendy"
license = "BSD-3-Clause"
readme = "README.md"

keywords = ["bencode", "serialization", "deserialization", "bittorent"]
categories = ["encoding", "decoding", "no-std"]

[badges]
maintenance = {status = "actively-developed"}
travis-ci = { repository = "P3KI/bendy" }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[dependencies]
failure = { version = "^0.1.3", default_features = false, features = ["derive"] }

[dev-dependencies]
regex = "^1.0"

### FEATURES #################################################################

[features]
default = ["std"]

# Provide implementations for common standard library types like `Vec<T>` and
# `HashMap<K, V>`. Requires a dependency on the Rust standard library.
std = [ "failure/std" ]

### Targets ##################################################################

[[test]]
name = "core_test"
required-features = [ "std" ]

[[example]]
name = "encode_torrent"
required-features = [ "std" ]
